cabal-version: 2.4
name:          aith
version:       0.1.0.0
license:       GPL-3.0-only
license-file:  LICENSE
maintainer:    Hexagonalstar64@gmail.com
author:        Superstar64

executable aith
    hs-source-dirs:     source
    other-modules:
        Misc.Path
        Misc.Util
        Environment
        TypeCheck
        TypeCheck.Core
        TypeCheck.Unify
        Ast.Common
        Ast.Kind
        Ast.Type
        Ast.Term
        Ast.Sort
        Module
        Misc.Symbol
        Misc.Prism
        Misc.Isomorph
        Syntax
        Misc.Syntax
        C.Ast
        Codegen
        C.Print
        Simple

    default-language:   Haskell2010
    default-extensions:
        MultiParamTypeClasses DeriveTraversable
        NoMonomorphismRestriction
        ScopedTypeVariables
        GeneralizedNewtypeDeriving LambdaCase 

    ghc-options:        -W -Worphans -Wcompat -Wincomplete-uni-patterns -interactive-print=Text.Pretty.Simple.pPrint
                        -rtsopts=all
    build-depends:
        base,
        containers,
        transformers,
        megaparsec,
        directory,
        filepath,
        pretty-simple
    main-is:            Main.hs
