cabal-version: 2.4
name:          aith
version:       0.1.0.0
license:       GPL-3.0-only
license-file:  LICENSE
maintainer:    Hexagonalstar64@gmail.com
author:        Superstar64

executable aith
    hs-source-dirs:     source
    other-modules:
        Misc.Boolean
        Misc.Path
        Misc.Util
        Misc.Symbol
        Misc.Prism
        Misc.Isomorph
        Misc.Syntax
        C.Ast
        C.Print
        Linearity
        Ast.Common
        Ast.Type
        Ast.Term
        TypeCheck
        Module
        Syntax
        Simple
        Codegen

    default-language:   Haskell2010
    default-extensions:
        MultiParamTypeClasses
        DeriveTraversable
        NoMonomorphismRestriction
        ScopedTypeVariables
        GeneralizedNewtypeDeriving
        LambdaCase

    ghc-options: -W -Worphans -Wcompat -Wincomplete-uni-patterns -rtsopts=all
    build-depends:
        base,
        containers,
        directory,
        filepath,
        transformers,
        megaparsec,
        pretty-simple
    main-is:            Main.hs
